   Add a hidden preference "allow_always_save" to make the Save buttons/
   menu items always sensitive and allow saving files even without
   changes.
 * plugins/filebrowser.c:
   Use the selection 'changed' signal of the treeview to update the
   popup menu items and show the popup menu on mouse button press events
   so right clicking on items will select them first.


2009-01-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Fix legacy file monitoring since I broke once more.
 * src/geanyentryaction.c, src/ui_utils.c, src/ui_utils.h:
   Add a clear icon to the toolbar search and goto text fields
   (will be available with GTK >= 2.16).
 * plugins/geanyfunctions.h, src/build.c, src/plugindata.h,
   src/plugins.c, src/printing.c, src/search.c, src/ui_utils.c,
   src/ui_utils.h:
   Add a progressbar widget to the statusbar and use it to show progress
   when building with the Make commands, when printing and when using
   Find in Files.
   Add progressbar convenience functions and ui_entry_add_clear_icon()
   to the plugin API.


2009-01-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Split Prefs dialog General tab into sub-notebook with Startup and
   Miscellaneous tabs. Merge Search tab into Miscellaneous tab.
 * src/search.c:
   Remember whether find/replace all expanders were expanded.
 * src/search.c:
   Rename static structs, group by dialog.
 * src/search.c:
   Refactor with create_find_dialog().


2009-01-26  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/cs.po, THANKS: Update of Czech translation. Thanks to Karel Kolman
   for providing.


2009-01-24  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Use g_timeout_add_seconds() instead of g_timeout_add().
   Add missing NULL check in monitor_file_changed_cb().
   Reset the file status when saving a file failed.
   Disable GIO based file monitoring for now since it doesn't work yet